[package]
name = "drv8838"
description = "Texas Instruments DRV8838 motor driver"
version = "0.1.0"
authors = ["Felix Edelmann <fxedel@gmail.com>"]
repository = "https://github.com/ApoapsisHGV/DRV8838"
edition = "2018"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "driver",
    "drv8838",
    "embedded-hal",
    "embedded-hal-driver",
    "motor",
    "ti",
    "texas-instruments",
]
license-file = "LICENSE"
readme = "README.md"


[dependencies.embedded-hal]
version = "0.2.3"


[dev-dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.3"
nb = "0.1.2"
panic-halt = "0.2.0"

[dev-dependencies.stm32f1xx-hal]
version = "0.3.0"
features = ["stm32f103", "rt"]
